--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										   <div class="desc" style=" height: 20%;">
 						   					<h1 style="position: relative; right: 15%; top: 10%;">Hi! <br>I'm Kushagra</h1>
 					
-												<p><a class="btn btn-primary btn-learn" href="White Minimalist Photo College Resume.pdf">Download CV <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/drive/u/0/folders/1gw7W5ztZpHLl8QZrEkAnHr0oH4MQoZAM">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -104,7 +104,7 @@
 					   					<div class="desc">
 						   					<h1>I am a rising <br>Web Designer/Illustrator</h1>
 												
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="https://kush-archmaster.github.io/archkush.github.io/">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
