--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 										   <div class="desc" style=" height: 20%;">
-						   					<h1 style="position: relative; right: 15%; top: 10%;">Hi! <br>I'm Kushagra</h1>
+						   					<h1 style="position: relative; right: 15%; top: 20%; color: white;">Hi! <br>I'm Kushagra</h1>
 					
-												<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/drive/u/0/folders/1gw7W5ztZpHLl8QZrEkAnHr0oH4MQoZAM">Download CV <i class="icon-download4"></i></a></p>
+												<p style="position:relative; top:5%;"><a class="btn btn-primary btn-learn" href="https://drive.google.com/drive/u/0/folders/1gw7W5ztZpHLl8QZrEkAnHr0oH4MQoZAM">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
